hive-macro/tests/macro/should_fail/function_argument_mutability.stderr
error: Function arguments should be mutable

         = help: All arguments in a Hive testfunction are mutable references.
         = note: example: fn my_fancy_test(test_channel: &mut dyn TestChannelHandle, probe: &mut Probe);

 --> tests/macro/should_fail/function_argument_mutability.rs:2:32
  |
2 | fn test_function(test_channel: &String, handle: String) {}
  |                                ^
